# mai-love

./: .editorconfig  .env.example  .env.sync-imac.example  .gitignore  .gitlab-ci.yml  .hintrc  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .snyk  .taurignore  APRI-SETUP.sh  BRACE_AUTOLAUNCH_SUMMARY.md  BRACE_IMAC_VSCODE_SYNC_SETUP.md  BRACE_PRESENTATION_GUIDE.md  BRACE_SETUP_COMPLETE_RIEPILOGO.md  BRACE_SETUP_COMPLETO_FINALE.md  BRACE_v3_DEPLOYMENT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ESEGUI-ORA.sh  FIX-AND-PUSH.sh  FIX-E-PUSH.sh  GRAFICA_UMANA_100_DESIGN_SYSTEM.md  GUIDA-AI-COMPLETA-VIO.html  GUIDA_SETUP_COMPLETA.md  IMPOSTA-TRADUZIONE-ITA.sh  LICENSE  LICENSE-PROPRIETARY  NOTICE  PROFILE_README.md  PUSH-FIX-ORA.sh  PUSH-TUTTO-ORA.sh  README.md  REPORT_BRUTALE_20260220 copia.md  RIATTIVA-TUTTO.sh  SETUP_COMPLETE_v3.0.md  SHA256SUM.txt  SPONSORS.md  (+43 more)
.cspell/: project-words.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SPONSOR_PROFILE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: test-guardian.agent.md  (+1 more)
.logs/: chat-cloud-test-latest.json  chat-cloud-test.json  chat-local-test-latest.json  key-status.json  orchestra.pids  runtime-apps-analysis-http.txt  runtime-apps-config-put.json  runtime-apps-config-put.txt
brace-v3/: __init__.py  _dump_algo.sh  benchmark.py  brace_v3.py  com.vio83.brace-mvp-9551.plist  demo_algorithm.py  demo_terminal_optimized.py  launch.sh  mvp_permanent_start.sh  mvp_permanent_status.sh  mvp_permanent_stop.sh  prototipo_web_advanced.py  run_mvp_9551.sh  scenarios_db.py  test_bunker_quality.py  webui.py  webui.py.bak  webui.py.conflict_bak  webui_glassmorphic_elite.py  webui_luxury_new.py  webui_proto.py  webui_video_wrapper.py
coverage/: lcov.info
data/: sponsor-stats.json
docs/: 404.html  API_REFERENCE.md  AUDIT_REPORT_FINALE_MONDIALE.md  CONTRIBUTING.md  GETTING_STARTED.md  GUIDA_TECNICA_COMPLETA_VIO.md  IMAC_PERMANENT_STACK_99_9.md  INVESTOR_PITCH_DECK_2026.md  IP_PROTECTION_CERTIFICATE.md  KOFI_PAGE_CONTENT.md  LAUNCH_READINESS_REPORT.md  LEGAL_PROOF_BUNDLE_2026-03-21.md  LINKEDIN_PROFILO_COMPLETO_2026.md  LINKEDIN_PROFILO_DEFINITIVO_2026.md  LINKEDIN_SPONSOR_CONTENT.md  LOCAL_RUNTIME_AUTOSTART.md  MACAIR_VSCODE_EMERGENCY_RECOVERY.md  MONETIZATION_TECHNICAL_CHECKLIST_2026.md  P0_P1_SETUP_GUIDE_2026.md  PEC_ISTRUZIONI_DATA_CERTA_20260318.md  PRIVACY_POLICY.md  PRODUCTION_CONFIG.md  PROMPT_OLLAMA_VSCODE_CORRETTO.md  READINESS_MASTERPLAN_2026.md  RELEASE_GUIDE.md  RELEASE_PROFILE.md  SECURITY.md  STRIPE_WEBHOOK_SETUP.md  TERMS_OF_SERVICE.md  VIO83_AI_MODELS_MASTER_LIST.md  Vio_AI_Orchestra_Specifica_Tecnica_v2.docx  index.html  robots.txt  sitemap.xml  support.html
scripts/: airdrop_enable.sh  bump-version.sh  db-maintenance.sh  disk-watchdog.sh  fix-proxy-mac.sh  generate-updater-keys.sh  generate_spec_v2.py  health-monitor.sh  imac_bootstrap_from_macair.sh  imac_ollama_install_all.sh  imac_remote_devstack_arch.sh  imac_sync_projects.sh  imac_tailscale_tunnel.sh  imac_transfer_and_cleanup.sh  install-mac-cleanup-agent.sh  mac-autopilot-permanent.sh  mac-cleanup.sh  mac-free-space-NOW.sh  nuke-failed-runs.sh  pec_zip_data_certa.sh  rebuild_env.sh  runtime-watchdog.sh  setup-brace-imac-complete.sh  setup-vio-complete.sh  setup-vscode-mirror.sh  vio-orchestra-autostart.sh  vio_mac_optimizer.sh  vscode-mirror-system.py  vscode-sync-imac.py  vscode-sync-imac.sh  vscode_sync_bunker.sh
src/: App.tsx  VioAiOrchestra.jsx  main.tsx  react-syntax-highlighter.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs
tests/: test_e2e_production.py
vio-tasks/: TASK-01-spazio-mac.md  TASK-02-vio-ai-orchestra.md  TASK-03-privacy-sicurezza.md
(+335 files in other folders)
