[project]
name = "vio83-ai-orchestra"
version = "0.9.0"
description = "Desktop AI orchestration platform — local-first, multi-provr"
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S"]
ignore = ["S101", "S307"]
