[package]
name = "vio83-ai-orchestra"
version = "0.9.0"
description = "VIO 83 AI Orchestra — Multi-AI Orchestration Desktop Platform. 50+ AI models, Smart Routing, Cross-Check, RAG, Privacy-First."
authors = ["Viorica Porcu <porcu.v.83@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/vio83/vio83-ai-orchestra"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
